fix: session4 api
