# session4/api/public/swagger.json
@@ -18,7 +18,7 @@
 					"pass": {
 						"type": "string"
 					},
-					"verified": {
+					"is_verified": {
 						"type": "number",
 						"format": "double"
 					},
@@ -31,7 +31,7 @@
 					"user_id",
 					"email",
 					"pass",
-					"verified",
+					"is_verified",
 					"created"
 				],
 				"type": "object",
@@ -47,7 +47,7 @@
 						"type": "number",
 						"format": "double"
 					},
-					"value": {
+					"title": {
 						"type": "string"
 					},
 					"completed": {
@@ -65,7 +65,7 @@
 				"required": [
 					"todo_id",
 					"user_id",
-					"value",
+					"title",
 					"completed",
 					"created"
 				],
@@ -74,7 +74,7 @@
 			},
 			"TodoUpdateBody": {
 				"properties": {
-					"contentDirty": {
+					"title": {
 						"type": "string"
 					},
 					"completed": {
@@ -107,15 +107,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"success": {
-											"type": "boolean"
-										}
-									},
-									"required": [
-										"success"
-									],
-									"type": "object"
+									"type": "boolean"
 								}
 							}
 						}
@@ -143,15 +135,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"success": {
-											"type": "boolean"
-										}
-									},
-									"required": [
-										"success"
-									],
-									"type": "object"
+									"type": "boolean"
 								}
 							}
 						}
@@ -161,7 +145,7 @@
 				"parameters": [
 					{
 						"in": "query",
-						"name": "emailDirty",
+						"name": "email",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -169,7 +153,7 @@
 					},
 					{
 						"in": "query",
-						"name": "shaPass",
+						"name": "sha_pass",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -187,20 +171,8 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"verified": {
-											"type": "number",
-											"format": "double"
-										},
-										"success": {
-											"type": "boolean"
-										}
-									},
-									"required": [
-										"verified",
-										"success"
-									],
-									"type": "object"
+									"type": "number",
+									"format": "double"
 								}
 							}
 						}
@@ -229,19 +201,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"token": {
-											"type": "string"
-										},
-										"success": {
-											"type": "boolean"
-										}
-									},
-									"required": [
-										"token",
-										"success"
-									],
-									"type": "object"
+									"type": "string"
 								}
 							}
 						}
@@ -251,7 +211,7 @@
 				"parameters": [
 					{
 						"in": "query",
-						"name": "emailDirty",
+						"name": "email",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -259,7 +219,7 @@
 					},
 					{
 						"in": "query",
-						"name": "shaPass",
+						"name": "sha_pass",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -277,15 +237,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"success": {
-											"type": "boolean"
-										}
-									},
-									"required": [
-										"success"
-									],
-									"type": "object"
+									"type": "boolean"
 								}
 							}
 						}
@@ -321,22 +273,10 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"todos": {
-											"items": {
-												"$ref": "#/components/schemas/DbTodo"
-											},
-											"type": "array"
-										},
-										"success": {
-											"type": "boolean"
-										}
+									"items": {
+										"$ref": "#/components/schemas/DbTodo"
 									},
-									"required": [
-										"todos",
-										"success"
-									],
-									"type": "object"
+									"type": "array"
 								}
 							}
 						}
@@ -364,15 +304,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"success": {
-											"type": "boolean"
-										}
-									},
-									"required": [
-										"success"
-									],
-									"type": "object"
+									"type": "boolean"
 								}
 							}
 						}
@@ -393,7 +325,8 @@
 						"name": "todo_id",
 						"required": true,
 						"schema": {
-							"type": "string"
+							"format": "double",
+							"type": "number"
 						}
 					}
 				]
@@ -408,15 +341,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"success": {
-											"type": "boolean"
-										}
-									},
-									"required": [
-										"success"
-									],
-									"type": "object"
+									"type": "boolean"
 								}
 							}
 						}
