# session4/api/src/app.ts
@@ -1,28 +1,15 @@
-import {Application, application} from "express";
+import {Application} from "express";
 import express from "express";
-import moment from "moment";
-
-import cluster from "cluster";
-import os from "os";
 
 import * as sha1 from "js-sha1";
 
-import nodemailer from "nodemailer";
-import fs from "fs";
 import * as _ from "lodash";
 import {RegisterRoutes} from "./routers/routes";
 import swaggerUi from "swagger-ui-express";
 
-import sqlite3 from "sqlite3";
-import { open } from "sqlite";
-
-import {v4 as uuidv4} from "uuid";
-
 // All APIs that need to be included must be imported in app.ts
 import {DatabaseService} from "./services/DatabaseService";
-import {UserController} from "./controllers/UserController";
-import {TodosController} from "./controllers/TodosController";
-import {container} from "tsyringe";
+import { NodemailerService } from "./services/NodemailerService";
 
 const main = async () => {
     try {
@@ -44,60 +31,91 @@ const main = async () => {
             }),
         );
 
-        const db = container.resolve(DatabaseService);
-        db.connect();
+        const conn = new DatabaseService;
+        conn.connect();
 
         // Send email to user confirmation
         app.post('/user/register', async (req, res) => {
             let request = req.body;
             
             let email = request.email;
-            let shaPass = sha1(request.pass);
-            let response = await db.Register(email, shaPass);
+            let sha_pass = sha1(request.pass);
 
-            res.json(response);
+            let result = false;
+
+            try {
+                await conn.registerUser(email, sha_pass);
+                let user = await conn.getUserByEmailAndPass(email, sha_pass);
+                let token = await conn.makeVerification(user.user_id);
+                
+                let html = `<div><h>Test HTML Header</h><p>Go to this link to verify: https://127.0.0.1:8000/user/verify/${token}</p></div>`;
+                let subject = 'Test register email';
+                let target = email;
+
+                const nodemailer = new NodemailerService;
+                nodemailer.sendEmail(html, subject, target);
+
+                result = true;
+            } catch(exc) {
+                console.error(exc);
+            }
+
+            res.json(result);
         })
 
         // Get confirmation status
         app.get('/user/confirmation/:uuid', async (req, res) => {
-            let response = {
-                success: false,
-                verified: 0
-            };
+            let result = 0;
 
-            let uuidStr = req.params.uuid;
+            let user_id_str = req.params.uuid;
             
             try {
-                let uuid = parseInt(uuidStr);
-                response = await db.Confirmation(uuid);
-            } catch(e) {
-                console.log(e);
+                let user_id = parseInt(user_id_str);
+                
+                let user = await conn.getUserByUserId(user_id);
+                result = user.is_verified;
+            } catch(exc) {
+                console.error(exc);
             }
             
-            res.json(response);
+            res.json(result);
         })
 
         // Verify account
         app.get('/user/verify/:token', async (req, res) => {
-            let response = {
-                success: false
-            }
+            let result = false;
 
             let token = req.params.token;
-            response = await db.VerifyEmail(token);
 
-            res.json(response);
+            try {
+                let verification = await conn.getVerificationByToken(token);
+                await conn.verifyUser(verification.user_id);
+                result = true;
+            } catch(exc) {
+                console.error(exc);
+            }
+
+            res.json(result);
         })
         
         // Login and get token
         app.post('/user/login', async (req, res) => {
+            let result = '';
+
             let request = req.body;
-
             let email = request.email;
-            let shaPass = sha1(request.pass);
-            let response = await db.Login(email, shaPass);
+            let sha_pass = sha1(request.pass);
 
-            res.json(response);
+            try {
+                let user = await conn.getUserByEmailAndPass(email, sha_pass);
+                let token = await conn.makeSession(user.user_id);
+
+                result = token;
+            } catch(exc) {
+                console.error(exc);
+            }
+
+            res.json(result);
         })
 
         app.post('/todos/add', (req, res) => {
